# VIA

./: CMakeLists.txt  LICENSE  README.md
include/hexl/util/: defines.hpp
src/: FHE_LWE.cpp  FHE_LWE.hpp  LweSample.hpp  MlevKSKSample.hpp  MlweSample.hpp  RgswSample.hpp  RlevSample.hpp  RlweSample.hpp  VIAClient.hpp  VIAServer.hpp  VIA_CClient.hpp  VIA_CServer.hpp  core.hpp  functions.cpp  functions.hpp  test.cpp
